feat: dot on spring center